# problog

./: .gitignore  README.md  file.csv  pyproject.toml  requirements.txt
data/public/: open_router_models.json
docs/: chain-of-thought-reasoning-large-numbers.md  create-python-virtual-environment.md  custom_tastymap_hexcodes.txt  custom_tastymap_hexcodes_purple.txt  day07.md  day09 siamese networks metric learning for protein folding chemicals and 17th century lit NLP.md  example-prompt-responses.md  requirements.txt
docs/bergen-llm-dissociation/: 2024-07-03 problog logprobs RET project abstract Leon Bergen LLMDissociation.md  LLMReasoningDissociation.ipynb  README Magic_Words on CPU.md  README draft final report.md
docs/day01/: GD.py  Notebook1-GD Visualization.ipynb  Notebook2-Linear Regression.ipynb
docs/day01/Notebook3 - Classification/: MNIST Classification Abstract.ipynb  MNIST Classification Scratch.ipynb
docs/day02/: PyTorch_Autoencoder_removed.ipynb
docs/ret-grant/day03/: PyTorch_Autoencoder_removed.ipynb
docs/slides/: ChatGPT Log.hist.md  ChatGPT-3.5-turbo Log colored.md  ChatGPT-3.5-turbo Log.md  Effective Unreasonableness.ipynb  Effective Unreasonableness.md  Effective Unreasonableness.slides.html  EffectiveUnreasonableness.html  EffectiveUnreasonableness.md  RET_1_Effectively_Unreasonable_LLMS.md  RET_2_ChatGPT-3.5-turbo.md  RET_3_ARC.md  RET_Effectively_Unreasonable_LLMS.md  examples.md  show_slides.sh
frontend/: .firebaserc  .gitignore  README.md  index.html  interactive_block_diagram.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: api.tsx
frontend/src/components/: ColorDiagram.tsx  Topbar.tsx  index.tsx
frontend/src/components/auth/: Login.tsx  Register.tsx
frontend/src/components/chat/: Chat.tsx  Conroller.tsx  Styles.tsx  data.ts
frontend/src/markdown/: MarkDown.tsx  index.ts
frontend/src/pages/: Conversations.tsx  DownloadConversations.tsx  Home.tsx
src/problog/: README.md  api.py  app.py  db.py  gsm8k.csv  llm.py  schema.py  test_twinly.py
src/problog/chat/: chat.py  endpoint.py
src/problog/functions/: logprob.py
src/problog/old-code/: code.py  llm.py  test_twinly.py
src/problog/viz/: mobjects.py  networkx_plot.py  neural_network_manim.py
